[tool.poetry]
name = "ppo_implementation_deep_dive"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
stable-baselines3 = "^1.1.0"
tensorboard = "^2.5.0"
wandb = "0.12.1"
pyglet = "^1.5.19"

[tool.poetry.dev-dependencies]
spyder = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
