[tool.poetry]
name = "ppo_implementation_deep_dive"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
torch = "^1.7.1"
stable-baselines3 = "^1.1.0"
tensorboard = "^2.5.0"
wandb = "0.12.1"
pyglet = "^1.5.19"
opencv-python = "^4.5.3"
gym = "^0.21.0"

# Atari-related dependencies
atari-py = {version = "0.2.6", optional = true}
ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}

# Robotics env dependencies
pybullet = {version = "^3.1.8", optional = true}
free-mujoco-py = {version = "^2.1.6", optional = true}

[tool.poetry.dev-dependencies]
spyder = {version = "^5.1.1", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
spyder = ["spyder"]
atari = ["ale-py", "AutoROM"]
pybullet = ["pybullet"]
mujoco = ["free-mujoco-py"]

